--- a/database-demo/src/main/resources/application.properties
+++ b/database-demo/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 
 # logging.level.org.springframework=DEBUG
+
+# Display SQL statements in the console
+spring.jpa.show-sql=true
+
+# Defer initialization of the datasource until after Hibernate has been initialized
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
