--- a/jpa-demo/src/main/resources/application.properties
+++ b/jpa-demo/src/main/resources/application.properties
@@ -16,3 +16,11 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 # Turn on Hibernate statistics
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stats=DEBUG
+
+# Second level cache
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.use_query_cache=true
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.jcache.JCacheRegionFactory
+
+logging.level.org.hibernate.cache=DEBUG
+logging.level.org.ehcache=DEBUG
